error.log
srcs/utils/parsing.c:23:10: error: implicit declaration of function 'get_next_line' is invalid in C99 [-Werror,-Wimplicit-function-declaration]
                line = get_next_line(fd);
                       ^
srcs/utils/parsing.c:23:8: error: incompatible integer to pointer conversion assigning to 'char *' from 'int' [-Werror,-Wint-conversion]
                line = get_next_line(fd);
                     ^ ~~~~~~~~~~~~~~~~~
srcs/utils/parsing.c:72:2: error: implicit declaration of function 'ft_strncpy' is invalid in C99 [-Werror,-Wimplicit-function-declaration]
        ft_strncpy(result, original, pos);
        ^
srcs/utils/parsing.c:72:2: note: did you mean 'ft_strlcpy'?
libft/libft.h:191:11: note: 'ft_strlcpy' declared here
size_t                          ft_strlcpy(char *dst, const char *src, size_t dstsize);
                                ^
3 errors generated.
